src/math_ops/snapshots/rbx_types_ops__math_ops__rect__rect_div_f32.snap
---
source: src/math_ops/rect.rs
expression: "Rect::new(Vector2::new(15.0, 15.0),\nVector2::new(50.0, 50.0)).div(&4.0f32.into())"
---
Rect:
  - - 3.75
    - 3.75
  - - 12.5
    - 12.5
