src/math_ops/snapshots/rbx_types_ops__math_ops__rect__rect_div_vector2int16.snap
---
source: src/math_ops/rect.rs
expression: "Rect::new(Vector2::new(15.0, 15.0),\nVector2::new(50.0, 50.0)).div(&Vector2int16::new(5, 10).into())"
---
Rect:
  - - 3
    - 1.5
  - - 10
    - 5
