src/math_ops/snapshots/rbx_types_ops__math_ops__rect__rect_floor_div_vector2.snap
---
source: src/math_ops/rect.rs
expression: "Rect::new(Vector2::new(15.0, 15.0),\nVector2::new(50.0, 50.0)).floor_div(&Vector2::new(5.0, 10.0).into())"
---
Rect:
  - - 3
    - 1
  - - 10
    - 5
